--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -186,6 +186,12 @@ p2 {
     flex-direction: column;
     background-size: cover;
     background-position: center;
+    transition: transform 0.3s ease;
+}
+
+.part2-projects-1:hover, .part2-projects-2:hover, .part2-projects-3:hover {
+    transform: scale(1.03);
+    cursor: pointer;
 }
 
 .part2-projects-1 {
@@ -221,4 +227,12 @@ p2 {
 .project-info p {
     font-size: 16px;
     color: #666;
+}
+
+.part2-projects-3 a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: inherit;
 }   
