--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -203,7 +203,7 @@ p2 {
 }
 
 .part2-projects-3 {
-    background-image: url('../img/project3.jpg');
+    background-image: url('../img/project3.png');
 }
 
 .part2-projects-1 img, .part2-projects-2 img, .part2-projects-3 img {
