--- a/stylesheet/style3.css
+++ b/stylesheet/style3.css
@@ -12,6 +12,7 @@ body {
     display: flex;
     justify-content: flex-end;
 }
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -24,123 +25,25 @@ body {
     font-size: 24px;
     font-weight: bold;
     color: #000000;
+    
 }
+
+.logo a {
+    text-decoration: none;
+    color: #000000;
+}
+
 nav {
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
+
 nav a {
     margin: 0 15px;
     text-decoration: none;
     color: #333;
-    
 }
-
-.homepage {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 200px 20px;
-}
-
-.part1 {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.part1-left {
-    text-align: center;
-    padding: 0% 20px;
-}
-
-.part1-left img {
-    border-radius: 50%;
-    width: 480px;
-    height: 480px;
-}
-
-.part1-right {
-    padding: 0% 20px;
-    max-width: 600px;
-   
-}
-
-h1 {
-    font-family: 'Urbanist', sans-serif;
-    letter-spacing: -0.02em;
-    font-size: 100px;
-    margin: 20px 0;
-}
-
-h2 {
-    font-family: 'Urbanist', sans-serif;
-    font-size: 22px;
-    margin-bottom: 10px;
-}
-
-p1 {
-    font-family: 'PingFang SC', sans-serif;
-    width: 480px;
-    font-size: 16px;
-    line-height: 1.6em;
-    color: #666;  
-    display: block;
-}
-
-p2 {
-    font-family: 'Urbanist', sans-serif;
-    width: 480px;
-    font-size: 16px;
-    color: #666;
-    display: block;
-    line-height: 1.6em;
-}   
-
-.part1-right-button {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 40px;
-}
-.part1-right-button-1 {
-    background-color: #ff9900;
-    color: #fff;
-    padding: 50px 50px;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.part1-right-button-2 {
-    background-color: #ff9900;
-    color: #fff;
-    padding: 50px 50px;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.part1-right-button-3 {
-    background-color: #ff9900;
-    color: #fff;
-    padding: 50px 50px;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
 
 
 .part2 {
@@ -199,6 +102,7 @@ p2 {
 
 .part2-projects-1 {
     background-image: url('../img/mood.png');
+    background-size: cover;
 }
 
 .part2-projects-2 {
